--- a/css/style.css
+++ b/css/style.css
@@ -3,15 +3,18 @@ body {
     font-family: 'Poppins', sans-serif;
     line-height: 1.6;
     background-color: #fff;
+    margin: 0;
+    padding: 0;
 }
 
 /* Navbar */
 .navbar {
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+    padding: 1rem 2rem;  /* Aumenta o espaçamento interno horizontal */
 }
 
 .navbar-nav .nav-link {
-    font-weight: 500;
+    font-weight: 600;
     transition: color 0.3s ease-in-out;
     font-size: 1.1rem;
 }
@@ -20,139 +23,24 @@ body {
     color: #e1c16e;
 }
 
-/* Hero Section */
-#home {
-    background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('../imagem/rancho.jpg') center/cover no-repeat;
-    color: white;
-    text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.8);
-    padding: 7rem 0;
-}
-
-#home h1 {
-    font-size: 3rem;
-    font-weight: 600;
-    text-transform: uppercase;
-}
-
-#home p {
-    font-size: 1.2rem;
-}
-
-/* Botão */
-.btn-success {
-    border-radius: 25px;
-    padding: 12px 30px;
-    font-weight: 600;
-    transition: background-color 0.3s ease;
-}
-
-.btn-success:hover {
-    background-color: #e1c16e;
-    border-color: #e1c16e;
-}
-
-/* About Section */
-#about {
-    background-color: #f8f9fa;
-    padding: 6rem 0;
-    border-bottom: 2px solid #e1e1e1;
-}
-
-#about h2 {
-    font-weight: 600;
-    color: #4b3b2b;
-    font-size: 2rem;
-    letter-spacing: 1px;
-}
-
-#about p {
-    color: #666;
-    font-size: 1.1rem;
-    line-height: 1.8;
-    font-weight: 400;
-}
-
-/* Gallery Section */
-#gallery {
-    padding: 6rem 0;
-}
-
+/* Estilo do Carousel */
 .carousel-item img {
-    max-height: 500px;
-    object-fit: cover;
-    transition: transform 0.5s ease-in-out;
+    height: 400px; /* Ajuste o valor conforme necessário */
+    object-fit: cover; /* Garante que a imagem cubra completamente o espaço sem distorcer */
 }
 
-.carousel-item img:hover {
-    transform: scale(1.1);
-}
-
-/* Contact Section */
-#contact {
-    background-color: #f8f9fa;
-    padding: 6rem 0;
-}
-
-#contact .btn-success {
-    background-color: #4b3b2b;
-    border-radius: 25px;
-    padding: 12px 30px;
-    font-weight: bold;
-    transition: background-color 0.3s ease;
-}
-
-#contact .btn-success:hover {
-    background-color: #e1c16e;
-}
-#testimonials {
-    background-color: #f8f9fa;
-}
-
-.card {
-    border: none;
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-    margin-bottom: 1.5rem;
-}
-
-.card-title {
-    font-weight: 600;
-    color: #4b3b2b;
-}
-
-.card-text {
-    font-size: 1.1rem;
-    color: #666;
-}
-
-.text-warning {
-    font-size: 1.3rem;
-}
-
-form .form-label {
-    font-weight: 600;
-    color: #4b3b2b;
-}
-
-
-#location {
-    background-color: #e9f5e9;
-}
-
-.embed-responsive-item {
-    width: 100%;
-    height: 450px;
-    border: 0;
-}
 
 
 /* Footer */
 footer {
     background-color: #4b3b2b;
     padding: 2rem 0;
+    text-align: center;
 }
 
 footer p {
     font-size: 1rem;
+    color: #fff;
 }
 
 footer a {
