--- a/css/style.css
+++ b/css/style.css
@@ -63,10 +63,10 @@ body {
     border-radius: 30px;
     padding: 0.6rem 1.2rem;
     font-weight: 600;
-    background-color: rgba(0, 128, 0, 0.1);
+    background-color: #58ad5b;
     /* Fundo esverdeado leve */
     border: 2px solid #4CAF50;
-    color: #4CAF50;
+    color: #f8f8f8;
     transition: background-color 0.3s ease, transform 0.3s ease, box-shadow 0.3s ease;
 }
 
