--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ body {
     height: auto;
     /* Ajuste automático de altura */
     z-index: 9999;
-    background-color: rgba(156, 155, 127, 0.85);
+    background-color:#85927d;
     /* Marrom esverdeado translúcido */
     backdrop-filter: blur(10px);
     /* Efeito de desfoque no fundo */
@@ -32,23 +32,23 @@ body {
 
 /* Efeito de hover para navbar */
 .navbar:hover {
-    background-color: rgba(156, 155, 127, 1);
+    background-color:#85927d;
     /* Efeito de escurecimento ao passar o mouse */
 }
 
 /* Logo */
 .navbar-brand img {
-    height: 80px;
+    height: 100px;
     /* Tamanho ajustado da logo */
-    background-color: #ffffff;
-    /* Fundo branco na logo */
+    background-color:#85927d;
+    /* Fundo #85927d na logo */
     padding: 10px;
     /* Espaço aumentado ao redor da logo */
     border-radius: 50%;
     /* Bordas arredondadas para um efeito moderno */
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
     /* Efeito de sombra para dar destaque */
-    transition: transform 0.3s ease-in-out, box-shadow 0.3s ease;
+    transition: transform 0.6s ease-in-out, box-shadow 0.6s ease;
 }
 
 .navbar-brand img:hover {
@@ -56,75 +56,6 @@ body {
     /* Aumento da logo ao passar o mouse */
     box-shadow: 0 0 15px rgba(255, 255, 255, 0.5);
     /* Efeito de brilho ao passar o mouse */
-}
-
-/* Botão WhatsApp */
-.navbar .btn-whatsapp {
-    border-radius: 30px;
-    padding: 0.6rem 1.2rem;
-    font-weight: 600;
-    background-color: #58ad5b;
-    /* Fundo esverdeado leve */
-    border: 2px solid #4CAF50;
-    color: #f8f8f8;
-    transition: background-color 0.3s ease, transform 0.3s ease, box-shadow 0.3s ease;
-}
-
-/* Botão Reserva via Airbnb */
-.navbar .btn-airbnb {
-    border-radius: 30px;
-    padding: 0.6rem 1.2rem;
-    font-weight: 600;
-    background-color: #FF5A5F;
-    /* Cor oficial do Airbnb */
-    border: 2px solid #FF5A5F;
-    color: white;
-    transition: background-color 0.3s ease, transform 0.3s ease, box-shadow 0.3s ease;
-}
-
-/* Efeito hover para o botão de WhatsApp e Airbnb */
-.navbar .btn-whatsapp:hover,
-.navbar .btn-airbnb:hover {
-    background-color: #4CAF50;
-    color: #fff;
-    transform: scale(1.05);
-    box-shadow: 0 4px 10px rgba(0, 128, 0, 0.2);
-    /* Efeito de sombra mais forte ao passar o mouse */
-}
-
-.navbar .btn-airbnb:hover {
-    background-color: #FF3B3F;
-    /* Cor mais forte para o botão do Airbnb */
-}
-
-/* Ajuste para telas pequenas */
-@media (max-width: 768px) {
-    .navbar-brand img {
-        height: 60px;
-        /* Reduz o tamanho da logo */
-    }
-
-    .navbar .btn-whatsapp,
-    .navbar .btn-airbnb {
-        font-size: 0.8rem;
-        /* Diminui o tamanho dos botões */
-        padding: 0.4rem 0.8rem;
-    }
-}
-
-/* Ajuste para telas pequenas */
-@media (max-width: 500px) {
-    .navbar-brand img {
-        height: 60px;
-        /* Reduz o tamanho da logo */
-    }
-
-    .navbar .btn-whatsapp,
-    .navbar .btn-airbnb {
-        font-size: 0.6rem;
-        /* Diminui o tamanho dos botões */
-        padding: 0.2rem 0.6rem;
-    }
 }
 
 /* Estilo do Carousel */
@@ -177,6 +108,35 @@ body {
     }
 }
 
+/* Miniaturas do carrossel */
+.carousel-thumbnails {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;  /* Espaço entre o carrossel e as miniaturas */
+    gap: 15px;  /* Espaçamento entre miniaturas */
+}
+
+.thumb-indicator {
+    width: 100px;  /* Aumentando o tamanho das miniaturas */
+    height: 70px;
+    border-radius: 5px;
+    object-fit: cover;
+    opacity: 0.5;
+    cursor: pointer;
+    transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
+}
+
+.thumb-indicator.active {
+    opacity: 1;
+    transform: scale(1.1);  /* Destaca a miniatura ativa */
+    border: 3px solid #85927d;  /* Borda destacada */
+}
+
+.thumb-indicator:hover {
+    opacity: 0.8;
+}
+
+
 /* Estilo dos Itens */
 .container {
     margin-top: 50px;
@@ -192,7 +152,7 @@ body {
 
 .col-md-4 i {
     font-size: 2.5rem;
-    color: #4b3b2b;
+    color:#85927d;
     margin-bottom: 10px;
 }
 
@@ -229,16 +189,16 @@ body {
 }
 
 #precos .btn:hover {
-    background-color: #6c4a3d;
+    background-color: #85927d;
 }
 
 #precos h2 {
     font-size: 2.5rem;
-    color: #4b3b2b;
+    color:#85927d;
 }
 
 #precos .card-title {
-    color: #4b3b2b;
+    color: #85927d;
     font-weight: 600;
 }
 
@@ -253,14 +213,14 @@ body {
 
 
 #faq .accordion-button {
-    background-color: #4b3b2b;
+    background-color: #85927d;
     color: white;
     font-weight: 600;
     border-radius: 10px;
 }
 
 #faq .accordion-button:not(.collapsed) {
-    background-color: #6c4a3d;
+    background-color: #85927d;
 }
 
 #faq .accordion-item {
@@ -274,40 +234,94 @@ body {
     font-weight: 600;
 }
 
+/* Estilo para o mapa responsivo */
+.embed-responsive {
+    position: relative;
+    display: block;
+    width: 100%;
+    height: 0;
+    padding-bottom: 56.25%; /* Aspect ratio de 16:9 */
+    overflow: hidden;
+    max-width: 100%;
+    background: #fff;
+}
+
+.embed-responsive iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 0;
+}
+
+/* Botão Flutuante do WhatsApp */
+.whatsapp-button {
+    position: fixed;
+    bottom: 20px;
+    left: 20px;
+    z-index: 1000;
+    width: 60px;
+    height: 60px;
+    border-radius: 50%; /* Torna o botão redondo */
+    background-color: #25d366; /* Cor verde oficial do WhatsApp */
+    color: white; /* Cor do ícone */
+    display: flex;
+    justify-content: center; /* Centraliza horizontalmente */
+    align-items: center; /* Centraliza verticalmente */
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); /* Sombra */
+    text-decoration: none; /* Remove sublinhado */
+    font-size: 28px; /* Tamanho do ícone */
+    transition: transform 0.3s ease, box-shadow 0.3s ease; /* Animação suave */
+}
+
+.whatsapp-button:hover {
+    transform: scale(1.1); /* Ampliação no hover */
+    box-shadow: 0 6px 15px rgba(0, 0, 0, 0.3); /* Sombra mais intensa */
+    background-color: #20c659; /* Cor verde mais escura no hover */
+}
+
+.whatsapp-button i {
+    color: white; /* Ícone branco */
+}
+
+
 footer {
-    background-color: #4b3b2b;
-    color: white;
+    background-color: #4b3b2b; /* Marrom sofisticado */
+    color: #fff8e1; /* Tom bege claro para contraste */
+    padding: 50px 0 20px;
+    font-family: 'Poppins', sans-serif;
 }
 
 footer .btn {
     background-color: #e1c16e;
-    color: #4b3b2b;
+    color: #4b3b2b; 
     font-weight: 600;
     border-radius: 25px;
-    padding: 10px 20px;
+    padding: 12px 30px;
+    transition: all 0.3s ease-in-out;
+    text-transform: uppercase;
+    font-size: 16px;
 }
 
 footer .btn:hover {
     background-color: #d0a04b;
-    color: white;
-}
-
-footer a {
-    color: #e1c16e;
-    text-decoration: none;
-}
-
-footer a:hover {
-    text-decoration: underline;
-}
-
-footer hr {
-    border-top: 1px solid #e1c16e;
+    color: #fff;
+    transform: translateY(-3px);
 }
 
 footer h5 {
-    font-weight: 600;
-    color: #e1c16e;
+    font-weight: 700;
+    font-size: 20px;
+    color: #ffdd94; /* Dourado suave para melhor destaque */
+    margin-bottom: 20px;
+    text-transform: uppercase;
+}
+
+footer p, footer ul li {
+    color: #fff8e1; /* Texto bege claro para melhor contraste */
+    font-size: 16px;
+    margin-bottom: 10px;
 }
 
 footer ul {
@@ -315,6 +329,55 @@ footer ul {
     padding-left: 0;
 }
 
-footer ul li {
-    color: #dcdcdc;
+footer a {
+    color: #ffdd94; /* Link com destaque elegante */
+    text-decoration: none;
+    font-weight: 500;
+    transition: color 0.3s ease-in-out;
+}
+footer .col-md-4 i {
+    font-size: 2.5rem;
+    color: #fff; /* Cor branca aplicada somente no footer */
+    margin-bottom: 10px;
+}
+
+footer .col-md-4 p {
+    color: #fff; /* Cor branca aplicada somente no footer */
+    font-size: 1rem;
+}
+
+
+footer a:hover {
+    color: #e1c16e;
+    text-decoration: underline;
+}
+
+footer hr {
+    border-top: 1px solid #e1c16e;
+}
+
+footer .social-links a {
+    font-size: 24px;
+    margin: 0 15px;
+    color: #ffdd94;
+    transition: all 0.3s ease-in-out;
+}
+
+footer .social-links a:hover {
+    color: #e1c16e;
+    transform: scale(1.2);
+}
+
+.footer-bottom {
+    text-align: center;
+    margin-top: 40px;
+    padding-top: 20px;
+    border-top: 1px solid #e1c16e;
+    font-size: 14px;
+    color: #ccc0a0; /* Cinza suave para menor destaque */
+}
+
+footer iframe {
+    border-radius: 10px;
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
 }
