--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,6 @@ body {
     margin: 0;
     padding: 0;
     padding-top: 60px;
-    /* Menor que antes, para compensar a navbar ainda mais compacta */
 }
 
 /* Navbar */
@@ -22,33 +21,27 @@ body {
     height: auto;
     /* Ajuste automático de altura */
     z-index: 9999;
-    background-color:#85927d;
-    /* Marrom esverdeado translúcido */
-    backdrop-filter: blur(10px);
-    /* Efeito de desfoque no fundo */
+    background-color: #85927d;
+    /* Marrom esverdeado sólido */
     transition: background-color 0.3s ease;
-    /* Transição suave de cor */
 }
 
 /* Efeito de hover para navbar */
 .navbar:hover {
-    background-color:#85927d;
-    /* Efeito de escurecimento ao passar o mouse */
+    background-color: #85927d;
+    /* Mantém a mesma cor ao passar o mouse */
 }
 
 /* Logo */
 .navbar-brand img {
-    height: 100px;
+    height: 90px;
     /* Tamanho ajustado da logo */
-    background-color:#85927d;
-    /* Fundo #85927d na logo */
+    background-color: #85927d;
+    /* Fundo da logo na mesma cor da navbar */
     padding: 10px;
     /* Espaço aumentado ao redor da logo */
     border-radius: 50%;
-    /* Bordas arredondadas para um efeito moderno */
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-    /* Efeito de sombra para dar destaque */
-    transition: transform 0.6s ease-in-out, box-shadow 0.6s ease;
+
 }
 
 .navbar-brand img:hover {
@@ -61,7 +54,7 @@ body {
 /* Estilo do Carousel */
 .carousel-item img {
     width: 100%;
-    height: 100%;
+    height: 80%;
     /* Ajuste automático conforme a altura do carrossel */
     object-fit: cover;
     /* Faz com que a imagem cubra a área do carrossel sem distorção */
@@ -255,11 +248,10 @@ body {
     border: 0;
 }
 
-/* Botão Flutuante do WhatsApp */
 .whatsapp-button {
     position: fixed;
     bottom: 20px;
-    left: 20px;
+    right: 20px; /* Define a posição no lado direito */
     z-index: 1000;
     width: 60px;
     height: 60px;
