correçao de overflow-x:hidden

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,10 @@
 /* Importando fontes do Google */
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Roboto:wght@400&display=swap');
 
+body, html {
+    overflow-x: hidden;
+}
+
 /* Estilo Geral */
 body {
     font-family: 'Poppins', sans-serif;
@@ -69,7 +73,7 @@ body {
 /* Estilo do Carousel */
 .carousel-item img {
     width: 100%;
-    height: 80%;
+    height: 100%;
     /* Ajuste automático conforme a altura do carrossel */
     object-fit: cover;
     /* Faz com que a imagem cubra a área do carrossel sem distorção */
@@ -155,7 +159,7 @@ body {
 /* Estilo específico para h2 na seção Comodidades */
 #comodidades h2 {
     font-family: 'Montserrat', sans-serif; /* Fonte moderna e sofisticada */
-    font-size: 2.5rem; /* Tamanho maior */
+    font-size: 2.0rem; /* Tamanho maior */
     color: #6c7b58; /* Cor um pouco mais escura para melhor contraste */
     font-weight: 700; /* Mais grosso */
     line-height: 1.4; /* Espaçamento entre linhas */
