troca de cor para 6c757d do comodidades

--- a/css/style.css
+++ b/css/style.css
@@ -171,7 +171,7 @@ body {
 #comodidades p {
     font-family: 'Roboto', sans-serif; /* Fonte clean e moderna */
     font-size: 1.2rem; /* Tamanho para legibilidade */
-    color: #9a9a8c; /* Cor leve e clean */
+    color: #6c757d; /* Cor leve e clean */
     line-height: 1.6; /* Espaçamento confortável */
     text-align: center; /* Centralizado */
 }
