--- a/css/style.css
+++ b/css/style.css
@@ -165,6 +165,8 @@ body {
     line-height: 1.4; /* Espaçamento entre linhas */
     text-align: center; /* Centralizado */
     text-transform: uppercase; /* Texto em maiúsculas */
+    opacity: 0.5; /* Deixa o ícone com 50% de transparência */
+    transition: transform 0.3s ease, background-color 0.3s ease, opacity 0.5s ease; /* Adiciona transição suave */
 }
 
 /* Estilo específico para p na seção Comodidades */
@@ -311,8 +313,8 @@ body {
     padding: 15px; /* Adiciona um espaço interno */
     background-color: #a8b564; /* Verde amarelado */
     color: white; /* Garante que o ícone fique visível */
-    opacity: 0.9; /* Deixa o ícone um pouco transparente */
-    transition: transform 0.3s ease, background-color 0.3s ease, opacity 0.3s ease; /* Adiciona transição suave */
+    opacity: 0.5; /* Deixa o ícone com 50% de transparência */
+    transition: transform 0.3s ease, background-color 0.3s ease, opacity 0.5s ease; /* Adiciona transição suave */
 }
 
 .icon-style:hover {
