--- a/css/style.css
+++ b/css/style.css
@@ -166,7 +166,7 @@ body {
     text-align: center; /* Centralizado */
     text-transform: uppercase; /* Texto em maiúsculas */
     opacity: 0.5; /* Deixa o ícone com 50% de transparência */
-    transition: transform 0.3s ease, background-color 0.3s ease, opacity 0.5s ease; /* Adiciona transição suave */
+    transition: transform 0.3s ease, background-color 0.3s ease, opacity 0.3git add cubic-bezier(0.075, 0.82, 0.165, 1)s ease; /* Adiciona transição suave */
 }
 
 /* Estilo específico para p na seção Comodidades */
@@ -394,6 +394,8 @@ body {
     color: white;
     font-weight: 600;
     border-radius: 10px;
+    opacity: 0.5; /* Deixa o ícone com 50% de transparência */
+    transition: transform 0.3s ease, background-color 0.3s ease, opacity 0.2s ease; /* Adiciona transição suave */
 }
 
 #faq .accordion-button:not(.collapsed) {
