--- a/css/style.css
+++ b/css/style.css
@@ -349,17 +349,22 @@ body {
 }
 
 #precos .btn:hover {
-    background-color: #4b3b2b;  /* Verde mais claro para o efeito de hover */
+    background-color: #6c7b58;  /* Verde mais claro para o efeito de hover */
     transform: scale(1.05);  /* Efeito de ampliação do botão */
 }
 
 #precos h2 {
     font-size: 2.5rem;
-    color: #4b3b2b;
+    color: #6c7b58;
+}
+#precos h5 {
+    color: #6c7b58; /* Cor verde amarelada */
+    font-weight: 600; /* Define o peso da fonte */
 }
 
+
 #precos .card-title {
-    color: #85927d;
+    color: #6c7b58;
     font-weight: 600;
 }
 
@@ -390,34 +395,25 @@ body {
 }
 
 #faq .accordion-button {
-    background-color: #a8b564;
-    color: white;
-    font-weight: 600;
-    border-radius: 10px;
-    opacity: 0.5; /* Deixa o ícone com 50% de transparência */
-    transition: transform 0.3s ease, background-color 0.3s ease, opacity 0.2s ease; /* Adiciona transição suave */
-}
-
-#faq .accordion-button {
-    color: #414b32; /* Cor do texto dos botões */
     background-color: #fff; /* Fundo branco */
-    border: 2px solid #414b32; /* Borda com a mesma cor do texto */
+    color: #6c7b58; /* Cor do texto dos botões */
+    border: 2px solid #6c7b58; /* Borda com a mesma cor do texto */
     font-weight: 600; /* Peso da fonte */
 }
 
 #faq .accordion-button:not(.collapsed) {
-    background-color: #414b32; /* Fundo verde amarelado quando expandido */
-    color: white; /* Cor do texto quando expandido */
+    background-color: #fff; /* Mantém o fundo branco quando expandido */
+    color: #6c7b58; /* Cor do texto quando expandido */
 }
 
 #faq .accordion-item {
-    border: 1px solid #414b32; /* Borda verde amarelada */
+    border: 1px solid #6c7b58; /* Borda verde amarelada */
     border-radius: 10px; /* Borda arredondada */
     margin-bottom: 10px;
 }
 
 #faq h2 {
-    color: #414b32; /* Cor do título das perguntas */
+    color: #6c7b58; /* Cor do título das perguntas */
     font-weight: 600;
 }
 
