--- a/css/style.css
+++ b/css/style.css
@@ -134,7 +134,7 @@ body {
     border: none;  /* Remove borda */
     color: transparent;  /* Torna o ícone invisível */
     outline: none;  /* Remove qualquer contorno */
-    opacity: 0.9;  /* Torna os botões semi-transparentes */
+
 }
 
 .carousel-control-prev-icon,
@@ -146,7 +146,7 @@ body {
 @media (max-width: 768px) {
     .carousel-control-prev,
     .carousel-control-next {
-        opacity: 0.5;  /* Transparência também em telas menores */
+        opacity: 0.0;  /* Transparência também em telas menores */
     }
 }
 
@@ -230,13 +230,12 @@ body {
 .thumb-indicator.active {
     opacity: 1;
     transform: scale(1.1);  /* Destaca a miniatura ativa */
-    border: 3px solid #85927d;  /* Borda destacada */
 }
 
 /* Miniatura com hover */
 .thumb-indicator:hover {
     opacity: 0.9;  /* Menos transparente no hover */
-    border: 3px solid #85927d;  /* Borda destacada no hover */
+    border: 2px solid #ffffff;  /* Borda destacada no hover */
 }
 
 /* Ajuste para telas menores */
